--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "private": true,
-  "name": "slate-packages",
+  "name": "slate-ridd",
   "version": "1.0.0",
   "workspaces": [
     "packages/*"
